--- a/.bmi/model_ingest_tool/ingest.yaml.tmpl
+++ b/.bmi/model_ingest_tool/ingest.yaml.tmpl
@@ -1,6 +1,2 @@
-ingest_file1: {ingest_file1}
-ingest_file2: {ingest_file2}
-ingest_file3: {ingest_file3}
-ingest_file4: {ingest_file4}
-ingest_file5: {ingest_file5}
+ingest_files: {ingest_files}
 make_public: {make_public}
