List the location of project link directory as parameters
The purpose of the project link directory is to sort uploads by
modeling project (e.g., CMIP5, MsTMIP, PBS). Though ILAMB doesn't
care (it just wants the DATA and MODELS directories), the project
link directory is useful for display in WMT. The `link_dir` and
`study_name` parameters are optional, and can safely be ignored
by everyone else.

--- a/.bmi/benchmark_ingest_tool/ingest.yaml.tmpl
+++ b/.bmi/benchmark_ingest_tool/ingest.yaml.tmpl
@@ -1,4 +1,6 @@
 ilamb_root: {ilamb_root}
 dest_dir: {dest_dir}
+link_dir: {link_dir}
+study_name: {study_name}
 ingest_files: {ingest_files}
 make_public: {make_public}
