--- a/.bmi/model_ingest_tool/ingest.yaml.tmpl
+++ b/.bmi/model_ingest_tool/ingest.yaml.tmpl
@@ -1,4 +1,6 @@
 ilamb_root: {ilamb_root}
 dest_dir: {dest_dir}
+link_dir: {link_dir}
+study_name: {study_name}
 ingest_files: {ingest_files}
 make_public: {make_public}
